<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sigin_bg"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:gravity="center"
        android:text="@string/signin"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_rectangle_stroke_bg"
            android:hint="@string/email"
            android:maxLength="320"
            android:padding="5dp"
            android:inputType="textWebEmailAddress"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signin_edt_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_edt_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/rounded_rectangle_stroke_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="320"
            android:padding="5dp"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/signin_edt_password"
        app:layout_constraintTop_toBottomOf="@id/signin_edt_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@drawable/orange_bg"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:backgroundTint="@color/blue"
        android:padding="10dp"
        android:text="@string/fb"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:shapeAppearance="@style/MaterialButton" />

    <View
        android:id="@+id/view1"
        android:layout_width="120dp"
        android:layout_height="0.5dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="52dp"
        android:layout_marginTop="42dp"
        android:background="@color/lightSemiBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_fb" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/btn_fb"/>

    <View
        android:layout_width="120dp"
        android:layout_height="0.5dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="10dp"
        android:background="@color/lightSemiBlack"
        app:layout_constraintStart_toEndOf="@id/tv_or"
        app:layout_constraintTop_toBottomOf="@id/btn_fb"/>

    <TextView
        android:id="@+id/tv_new_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/new_member"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:background="@drawable/blue_bg_with_round_corners"
        android:padding="10dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new_member" />

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="40dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/signin_edt_password"
        app:layout_constraintEnd_toStartOf="@id/tv_forgot_password"
        app:layout_constraintTop_toBottomOf="@id/signin_edt_password">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8">
        <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminate="true" />
    </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>