<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sigin_bg"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/register"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_parent_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/parent_name"
            android:padding="5dp"
            android:background="@drawable/rounded_rectangle_stroke_bg"
            android:maxLength="320"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_parent_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_parent_name" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/parent_no"
            android:padding="5dp"
            android:background="@drawable/rounded_rectangle_stroke_bg"
            android:maxLength="10"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_register_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_parent_no" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:padding="5dp"
            android:background="@drawable/rounded_rectangle_stroke_bg"
            android:maxLength="320"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_register_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        app:hintEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_register_email" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:padding="5dp"
            android:inputType="textPassword"
            android:background="@drawable/rounded_rectangle_stroke_bg"
            android:maxLength="320"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:padding="10dp"
        android:textSize="16sp"
        android:background="@drawable/orange_bg"
        app:layout_constraintTop_toBottomOf="@id/edt_register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/register"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>